# saber-metrics-machine-learning

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
data/: download_data.py  season_blend.py  transform.py
data/vector/: dv.pkl  train.pkl  val.pkl
features/: EDA.ipynb  season_blend.py  transform.py
predict/: Dockerfile  README.md  fly.toml  predict.py  predict_app.py  pyproject.toml  test.py
train/: EDA.ipynb  hpo.py  hyperopt.ipynb  preprocess.py  threshold.ipynb  xgb_pipeline.pkl
