[project]
name = "predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.38.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
